# it-demo

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .travis-ci.yml  .travis.yml  Pipfile  README.md  pyproject.toml  pytest.ini
airmo/server/: server.py
appname/: __init__.py  assets.py  colors.py  config.py  extensions.py  forms.py  models.py  settings.py
appname/controllers/: main.py
appname/static/public/css/: common.css
appname/templates/: base.html  index.html
src/airmo/server/: app.py
tests/: conftest.py  test_addition.py  test_config.py  test_login.py  test_models.py  test_swagger.py  test_urls.py
tests/step_defs/: test_service.py
tf/00_vpc/us-west-2/: main.tf  outputs.tf  variables.tf
tf/10_ec2/: main.tf  outputs.tf  userdata.sh  variables.tf
