[tool.poetry]
name = "it-demo"
version = "0.0.1"
description = "A demonstrational project for the Mozilla IT department's offsite"
authors = [
    "Stewart Henderson <shenderson@mozilla.com"
]
license = "MPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1"
requests = "^2.22"
Flask-Assets = "^0.12.0"
Flask-Cache = "^0.13.1"
Flask-DebugToolbar = "^0.10.1"
Flask-Login = "^0.4.1"
Flask-Script = "^2.0"
Flask-SQLAlchemy = "^2.4"
Flask-WTF = "^0.14.2"
itsdangerous = "^1.1"
cssmin = "^0.2.0"
jsmin = "^2.2"
flasgger = "^0.9.3"
Flask-FeatureFlags = "^0.6"

[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }
flake8 = "^3.7"
mypy = {version = "^0.720.0", allows-prereleases = true}
pytest-bdd = "^3.2"
selenium = "^3.141"
pre-commit = "^1.18"
detect-secrets = "^0.12.5"
codecov = "^2.0"
pytest = "^5.1"
pytest-cov = "^2.7"
mccabe = "^0.6.1"
webtest = "^2.0"

[tool.black]
line-length = 82
py36 = true
skip-string-normalization = true
